# VehiScan

./: .gitignore  Dockerfile  README.md  check_events.exs  database_schema.sql  delete_cameras.exs  docker-compose.yml  mix.exs  run_vehiscan.bat
apps/vehiscan/: .gitignore  README.md  mix.exs
apps/vehiscan/lib/: vehiscan.ex
apps/vehiscan/lib/vehiscan/: application.ex  mailer.ex  repo.ex  reporting.ex
apps/vehiscan/test/: monitoring_test.exs  test_helper.exs
apps/vehiscan_web/: .gitignore  README.md  mix.exs
apps/vehiscan_web/lib/: vehiscan_web.ex
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
proyecto_sistema_inteligente/: README.md  pyproject.toml  stream_camera.py
proyecto_sistema_inteligente/conf/base/: catalog.yml  parameters_license_plate_ocr.yml  parameters_vehicle_reid.yml  parameters_vehicle_tracking.yml
proyecto_sistema_inteligente/src/proyecto_sistema_inteligente/: __init__.py  __main__.py  settings.py
proyecto_sistema_inteligente/src/proyecto_sistema_inteligente/pipelines/license_plate_ocr/: __init__.py  nodes.py  pipeline.py
proyecto_sistema_inteligente/src/proyecto_sistema_inteligente/pipelines/vehicle_reid/: __init__.py  nodes.py  pipeline.py
proyecto_sistema_inteligente/src/proyecto_sistema_inteligente/pipelines/vehicle_tracking/: __init__.py  nodes.py  pipeline.py
proyecto_sistema_inteligente/tests/pipelines/license_plate_ocr/: test_pipeline.py
proyecto_sistema_inteligente/tests/pipelines/vehicle_reid/: test_pipeline.py
proyecto_sistema_inteligente/tests/pipelines/vehicle_tracking/: test_pipeline.py
(+100 files in other folders)
